--- a/templates/game.html
+++ b/templates/game.html
@@ -5,13 +5,28 @@
 </head>
 <body>
     <form action="/madlib">
-        <label> Please Provide a Noun: <input type="text" name="noun" placeholder="e.g. wombat"></label>
+        <label> Please Provide 3 Nouns (Singular): 
+            <input type="text" name="noun1" placeholder="e.g. wombat">
+            <input type="text" name="noun2">
+            <input type="text" name="noun3"></label>
         <br><br>
-        <label> Please Provide an Adjective: <input type="text" name="adjective" placeholder="e.g. smelly"></label>
+        <label> Please Provide 4 Plural Nouns: 
+            <input type="text" name="plnoun1" placeholder="e.g. wombats">
+            <input type="text" name="plnoun2">
+            <input type="text" name="plnoun3">
+            <input type="text" name="plnoun4"></label>
         <br><br>
-        <label> Please Provide a Color: <input type="text" name="color" placeholder="e.g. fuschia"></label>
+        <label> Please Provide 3 Adjectives: 
+            <input type="text" name="adj1" placeholder="e.g. smelly">
+            <input type="text" name="adj2">
+            <input type="text" name="adj3">
+        </label>
         <br><br>
-        <label> Please Provide a Person: <input type="text" name="person" placeholder="e.g. William Shatner"></label> 
+        <label> Please Provide 3 Verbs (Infinitive): 
+            <input type="text" name="verb1" placeholder="e.g. eat">
+            <input type="text" name="verb2" placeholder="e.g. eat">
+            <input type="text" name="verb3" placeholder="e.g. eat">
+        </label>
         <br><br>
         <input type="submit">
     </form>
