--- a/templates/hello.html
+++ b/templates/hello.html
@@ -2,12 +2,22 @@
 <html>
 <head>
     <title>Hi There!</title>
+    <link href="../static/madlibs.css" rel="stylesheet">
 </head>
 <body>
+    <div class="main">
+    <header>
     <h1>Hi There!</h1>
+    </header>
+    <article>
     <form action="/greet">
-        <label>What's your name? <input type="text" name="person"></label>
+        <label>What's your name? 
+        <br><br>
+        <input type="text" name="person"></label>
+        <br><br>
         <input type="submit">
     </form>
+    </article>
+</div>
 </body>
 </html>
