--- a/templates/compliment.html
+++ b/templates/compliment.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>A Compliment</title>
+    <title>A Compliment</title>
+    <link href="../static/madlibs.css" rel="stylesheet">
 </head>
 <body>
-    <p>Hi {{ person }}! I think you're {{ compliment }}!</p>
-    <form action="/game">
-        <label>Would you like to play a game?
-            <input type="radio" name="game" value="yes"> Yes</input>
-            <input type="radio" name="game" value="no"> No </input></label><br><br>
-        <input type="submit">
-    </form>
+    <div class="main">
+        <header>
+        <h2>Hi {{ person }}! I think you're {{ compliment }}!</h2>
+        </header>
+        <article>
+        <form action="/game">
+            <label>Would you like to play a game? <br><br>
+                <input type="radio" name="game" value="yes"> Yes</input>
+                <input type="radio" name="game" value="no"> No </input></label><br><br>
+            <input type="submit">
+        </form>
+        </article>
+    </div>
 </body>
 </html>
