classy footer fonts

--- a/templates/madlib-shakes.html
+++ b/templates/madlib-shakes.html
@@ -28,10 +28,10 @@
         Must {{ verb3 }} us pause.<br></p>
         </article>
 
-        <footer>
+        <footer class="classy">
             <form action="/game">
                 <label>Would you like to play again?<br><br>
-                <input type="submit" value="Aye"></label>
+                <input type="submit" value="Aye" class="classy"></label>
             </form>
         </footer>
     </div>
